// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App> snapshots: should render error 1`] = `
<div
  className="modal"
>
  <div
    className="modal__content"
  >
    <h2>
      Произошла ошибка
    </h2>
    <p>
      Пожалуйста, перезагрузите страницу
    </p>
  </div>
</div>
`;

exports[`<App> snapshots: should render loader 1`] = `
<div
  className="modal"
>
  <div
    className="modal__content"
  >
    <h2>
      Идет загрузка...
    </h2>
    <p>
      Пожалуйста, подождите
    </p>
  </div>
</div>
`;

exports[`<App> snapshots: should render main page 1`] = `
<div>
  <section
    className="movie-card"
  >
    <div
      className="movie-card__bg"
    >
      <img
        alt="The Grand Budapest Hotel"
        src="img/bg-the-grand-budapest-hotel.jpg"
      />
    </div>
    <h1
      className="visually-hidden"
    >
      WTW
    </h1>
    <header
      className="page-header movie-card__head"
    >
      <div
        className="logo"
      >
        <a
          className="logo__link"
        >
          <span
            className="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            className="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            className="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        className="user-block"
      >
        <div
          className="user-block__avatar"
        >
          <img
            alt="User avatar"
            height="63"
            src="img/avatar.jpg"
            width="63"
          />
        </div>
      </div>
    </header>
    <div
      className="movie-card__wrap"
    >
      <div
        className="movie-card__info"
      >
        <div
          className="movie-card__poster"
        >
          <img
            alt="The Grand Budapest Hotel poster"
            height="327"
            src="img/the-grand-budapest-hotel-poster.jpg"
            width="218"
          />
        </div>
        <div
          className="movie-card__desc"
        >
          <h2
            className="movie-card__title"
          >
            The Grand Budapest Hotel
          </h2>
          <p
            className="movie-card__meta"
          >
            <span
              className="movie-card__genre"
            >
              Drama
            </span>
            <span
              className="movie-card__year"
            >
              2014
            </span>
          </p>
          <div
            className="movie-card__buttons"
          >
            <button
              className="btn btn--play movie-card__button"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="19"
                viewBox="0 0 19 19"
                width="19"
              >
                <use
                  xlinkHref="#play-s"
                />
              </svg>
              <span>
                Play
              </span>
            </button>
            <button
              className="btn btn--list movie-card__button"
              type="button"
            >
              <svg
                height="20"
                viewBox="0 0 19 20"
                width="19"
              >
                <use
                  xlinkHref="#add"
                />
              </svg>
              <span>
                My list
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
  <div
    className="page-content"
  >
    <section
      className="catalog"
    >
      <h2
        className="catalog__title visually-hidden"
      >
        Catalog
      </h2>
      <ul
        className="catalog__genres-list"
      >
        <li
          className="catalog__genres-item catalog__genres-item--active"
        >
          <a
            className="catalog__genres-link"
            href="#"
            onClick={[Function]}
          >
            All genres
          </a>
        </li>
        <li
          className="catalog__genres-item "
        >
          <a
            className="catalog__genres-link"
            href="#"
            onClick={[Function]}
          >
            Comedies
          </a>
        </li>
        <li
          className="catalog__genres-item "
        >
          <a
            className="catalog__genres-link"
            href="#"
            onClick={[Function]}
          >
            Crime
          </a>
        </li>
        <li
          className="catalog__genres-item "
        >
          <a
            className="catalog__genres-link"
            href="#"
            onClick={[Function]}
          >
            Documentary
          </a>
        </li>
        <li
          className="catalog__genres-item "
        >
          <a
            className="catalog__genres-link"
            href="#"
            onClick={[Function]}
          >
            Dramas
          </a>
        </li>
      </ul>
      <div
        className="catalog__movies-list"
      >
        <article
          className="small-movie-card catalog__movies-card"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="small-movie-card__image"
          >
            <video
              className=""
              loop={true}
              muted={true}
              onCanPlay={[Function]}
              onLoadedMetadata={[Function]}
              onPause={[Function]}
              onPlay={[Function]}
              onTimeUpdate={[Function]}
              onWaiting={[Function]}
              poster="https://placehold.co/280x175/EEE/31343C"
              src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
            />
          </div>
          <h3
            className="small-movie-card__title"
          >
            <a
              className="small-movie-card__link"
              href="/"
            >
              Красный дракон
            </a>
          </h3>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="small-movie-card__image"
          >
            <video
              className=""
              loop={true}
              muted={true}
              onCanPlay={[Function]}
              onLoadedMetadata={[Function]}
              onPause={[Function]}
              onPlay={[Function]}
              onTimeUpdate={[Function]}
              onWaiting={[Function]}
              poster="https://placehold.co/280x175/EEE/31343C"
              src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
            />
          </div>
          <h3
            className="small-movie-card__title"
          >
            <a
              className="small-movie-card__link"
              href="/"
            >
              Молчание ягнят
            </a>
          </h3>
        </article>
      </div>
    </section>
    <footer
      className="page-footer"
    >
      <div
        className="logo"
      >
        <a
          className="logo__link logo__link--light"
        >
          <span
            className="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            className="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            className="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        className="copyright"
      >
        <p>
          © 2019 What to watch Ltd.
        </p>
      </div>
    </footer>
  </div>
</div>
`;

exports[`<App> snapshots: should render main page with full video 1`] = `
[
  <div
    className="player"
  >
    <video
      className="player__video"
      loop={false}
      muted={false}
      onCanPlay={[Function]}
      onLoadedMetadata={[Function]}
      onPause={[Function]}
      onPlay={[Function]}
      onTimeUpdate={[Function]}
      onWaiting={[Function]}
      poster="https://placehold.co/1900x1000/"
      src="https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm"
    />
    <button
      className="player__exit"
      onClick={[Function]}
      type="button"
    >
      Exit
    </button>
    <div
      className="player__controls"
    >
      <div
        className="player__controls-row"
      >
        <div
          className="player__time"
        >
          <progress
            className="player__progress"
            max="100"
            onClick={[Function]}
            value={0}
          />
          <button
            className="player__toggler"
            onMouseDown={[Function]}
            style={
              {
                "left": "0%",
              }
            }
          >
            Toggler
          </button>
        </div>
        <div
          className="player__time-value"
        >
          --:--
        </div>
      </div>
      <div
        className="player__controls-row"
      >
        <button
          className="player__play"
          onClick={[Function]}
          type="button"
        >
          <svg
            height="19"
            viewBox="0 0 19 19"
            width="19"
          >
            <use
              xlinkHref="#pause"
            />
          </svg>
          <span>
            Play
          </span>
        </button>
        <div
          className="player__name"
        />
        <button
          className="player__full-screen"
          onClick={[Function]}
          type="button"
        >
          <svg
            height="27"
            viewBox="0 0 27 27"
            width="27"
          >
            <use
              xlinkHref="#full-screen"
            />
          </svg>
          <span>
            Full screen
          </span>
        </button>
      </div>
    </div>
  </div>,
  <div>
    <section
      className="movie-card"
    >
      <div
        className="movie-card__bg"
      >
        <img
          alt="The Grand Budapest Hotel"
          src="img/bg-the-grand-budapest-hotel.jpg"
        />
      </div>
      <h1
        className="visually-hidden"
      >
        WTW
      </h1>
      <header
        className="page-header movie-card__head"
      >
        <div
          className="logo"
        >
          <a
            className="logo__link"
          >
            <span
              className="logo__letter logo__letter--1"
            >
              W
            </span>
            <span
              className="logo__letter logo__letter--2"
            >
              T
            </span>
            <span
              className="logo__letter logo__letter--3"
            >
              W
            </span>
          </a>
        </div>
        <div
          className="user-block"
        >
          <div
            className="user-block__avatar"
          >
            <img
              alt="User avatar"
              height="63"
              src="img/avatar.jpg"
              width="63"
            />
          </div>
        </div>
      </header>
      <div
        className="movie-card__wrap"
      >
        <div
          className="movie-card__info"
        >
          <div
            className="movie-card__poster"
          >
            <img
              alt="The Grand Budapest Hotel poster"
              height="327"
              src="img/the-grand-budapest-hotel-poster.jpg"
              width="218"
            />
          </div>
          <div
            className="movie-card__desc"
          >
            <h2
              className="movie-card__title"
            >
              The Grand Budapest Hotel
            </h2>
            <p
              className="movie-card__meta"
            >
              <span
                className="movie-card__genre"
              >
                Drama
              </span>
              <span
                className="movie-card__year"
              >
                2014
              </span>
            </p>
            <div
              className="movie-card__buttons"
            >
              <button
                className="btn btn--play movie-card__button"
                onClick={[Function]}
                type="button"
              >
                <svg
                  height="19"
                  viewBox="0 0 19 19"
                  width="19"
                >
                  <use
                    xlinkHref="#play-s"
                  />
                </svg>
                <span>
                  Play
                </span>
              </button>
              <button
                className="btn btn--list movie-card__button"
                type="button"
              >
                <svg
                  height="20"
                  viewBox="0 0 19 20"
                  width="19"
                >
                  <use
                    xlinkHref="#add"
                  />
                </svg>
                <span>
                  My list
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </section>
    <div
      className="page-content"
    >
      <section
        className="catalog"
      >
        <h2
          className="catalog__title visually-hidden"
        >
          Catalog
        </h2>
        <ul
          className="catalog__genres-list"
        >
          <li
            className="catalog__genres-item catalog__genres-item--active"
          >
            <a
              className="catalog__genres-link"
              href="#"
              onClick={[Function]}
            >
              All genres
            </a>
          </li>
          <li
            className="catalog__genres-item "
          >
            <a
              className="catalog__genres-link"
              href="#"
              onClick={[Function]}
            >
              Comedies
            </a>
          </li>
          <li
            className="catalog__genres-item "
          >
            <a
              className="catalog__genres-link"
              href="#"
              onClick={[Function]}
            >
              Crime
            </a>
          </li>
          <li
            className="catalog__genres-item "
          >
            <a
              className="catalog__genres-link"
              href="#"
              onClick={[Function]}
            >
              Documentary
            </a>
          </li>
          <li
            className="catalog__genres-item "
          >
            <a
              className="catalog__genres-link"
              href="#"
              onClick={[Function]}
            >
              Dramas
            </a>
          </li>
        </ul>
        <div
          className="catalog__movies-list"
        >
          <article
            className="small-movie-card catalog__movies-card"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                className=""
                loop={true}
                muted={true}
                onCanPlay={[Function]}
                onLoadedMetadata={[Function]}
                onPause={[Function]}
                onPlay={[Function]}
                onTimeUpdate={[Function]}
                onWaiting={[Function]}
                poster="https://placehold.co/280x175/EEE/31343C"
                src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              <a
                className="small-movie-card__link"
                href="/"
              >
                Красный дракон
              </a>
            </h3>
          </article>
          <article
            className="small-movie-card catalog__movies-card"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                className=""
                loop={true}
                muted={true}
                onCanPlay={[Function]}
                onLoadedMetadata={[Function]}
                onPause={[Function]}
                onPlay={[Function]}
                onTimeUpdate={[Function]}
                onWaiting={[Function]}
                poster="https://placehold.co/280x175/EEE/31343C"
                src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              <a
                className="small-movie-card__link"
                href="/"
              >
                Молчание ягнят
              </a>
            </h3>
          </article>
        </div>
      </section>
      <footer
        className="page-footer"
      >
        <div
          className="logo"
        >
          <a
            className="logo__link logo__link--light"
          >
            <span
              className="logo__letter logo__letter--1"
            >
              W
            </span>
            <span
              className="logo__letter logo__letter--2"
            >
              T
            </span>
            <span
              className="logo__letter logo__letter--3"
            >
              W
            </span>
          </a>
        </div>
        <div
          className="copyright"
        >
          <p>
            © 2019 What to watch Ltd.
          </p>
        </div>
      </footer>
    </div>
  </div>,
]
`;
